# HueCode

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
HueCode/: __init__.py  constants.py  decoder.py  encoder.py  metadata.json
huecode/: __init__.py  encoder.py
test/tenv/: pyvenv.cfg
