[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "HueCode"
authors = [{name = "KanesterP"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
requires-python = ">=3.8"
dependencies = [
  "Pillow >= 11.0.0"
]
keywords = ["steganography", "rgb", "encryption", "image", "fun"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Topic :: Multimedia :: Graphics"
]
urls = {
  "Homepage" = "https://github.com/Kanester",
  "Repository" = "https://github.com/Kanester/HueCode"
}